--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,9 @@ MONGO_DB_NAME=mystore
 
 
 JWT_SEED=cualquier_cosa
+
+MAILER_SERVICE=gmail
+MAILER_EMAIL=
+MAILER_SECRET_KEY=
+
+WEBSERVICE_URL=http://localhost:3000/api
